--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@
 p {
 	font-size: 16px;
 	font-family: "Times New Roman", Times, serif;
-	color: #ffffff;
 	line-height: 24px;
 }
 
@@ -25,7 +24,7 @@ h4 {
 header {
 	width: 100%;
 	height: 80px;
-	background-color: #161616;
+	background-color: #B695C0;
 }
 
 header nav {
